--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -13,7 +13,20 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    
+    <!-- gg-font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Anton&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap"
+      rel="stylesheet"
+    />
+    <style>
+      *{
+        box-sizing: border-box;
+        margin: 0;
+        padding: 0 ;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
